travelohi-backend/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    cors:
                      allow_origin_string_match:
                        - prefix: "*" #
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
                    routes:
                      # routing Auth Services
                      - match: { prefix: "/travelohi.v1.auth.AuthService" }
                        route: { cluster: auth_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      # routing Account Services
                      - match: { prefix: "/travelohi.v1.account.AccountService" }
                        route: { cluster: account_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      # routing Hotel Services
                      - match: { prefix: "/travelohi.v1.hotel.HotelService" }
                        route: { cluster: hotel_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      # routing Flight Services
                      - match: { prefix: "/travelohi.v1.flight.FlightService" }
                        route: { cluster: flight_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      # routing Cart Services
                      - match: { prefix: "/travelohi.v1.cart.CartService" }
                        route: { cluster: cart_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      # routing Admin Services
                      - match: { prefix: "/travelohi.v1.admin.AdminService" }
                        route: { cluster: admin_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      # routing Telemetry Services
                      - match: { prefix: "/travelohi.v1.telemetry.TelemetryService" }
                        route: { cluster: telemetry_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      # routing Communication Services
                      - match: { prefix: "/travelohi.v1.communication.CommunicationService" }
                        route: { cluster: communication_cluster, timeout: 0s, max_stream_duration: { max_stream_duration: 0s } }
                      
                      # routing Game Services (WebSockets)
                      - match: { prefix: "/ws/game" }
                        route: { cluster: game_cluster, timeout: 0s }
              http_filters:
                - name: envoy.filters.http.grpc_web # envoy
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              upgrade_configs:
                - upgrade_type: "websocket"

  clusters:
    # auth services
    - name: auth_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: auth_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: auth-service
                    port_value: 50051

    # account services
    - name: account_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: account_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: account-service
                    port_value: 50052

    # hotel services
    - name: hotel_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: hotel_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: hotel-service
                    port_value: 50053

    # flight services
    - name: flight_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: flight_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: flight-service
                    port_value: 50054

    # cart services
    - name: cart_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: cart_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: cart-service
                    port_value: 50055

    # admin services
    - name: admin_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: admin_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: admin-service
                    port_value: 50056

    # telemetry services
    - name: telemetry_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: telemetry_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: telemetry-service
                    port_value: 50057

    # communication services
    - name: communication_cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: communication_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: communication-service
                    port_value: 50058

    # game services
    - name: game_cluster
      connect_timeout: 0.25s
      type: logical_dns
      load_assignment:
        cluster_name: game_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: game-service
                    port_value: 50059
